<?xml version="1.0" encoding="utf-8"?>
<!--android:bg_main="@android:color/holo_blue_bright"-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/rl_common_title"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_56dp"
                android:background="#00000000">

    <ImageView
        android:id="@+id/iv_back"
        style="@style/common_both_w_and_h_wrap"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_8dp"
        android:layout_marginStart="@dimen/margin_8dp"
        android:contentDescription="@string/common_iv_back_content_desc"
        android:src="@drawable/ic_action_back"/>

    <TextView
        android:id="@+id/tv_title"
        style="@style/common_both_w_and_h_wrap"
        android:layout_centerInParent="true"
        android:text="@string/common_default_txt"
        android:textColor="@color/white"
        android:textSize="@dimen/font_size_xx_large"/>

    <ImageView
        android:id="@+id/iv_refresh"
        style="@style/common_both_w_and_h_wrap"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:contentDescription="@string/common_iv_refresh_content_desc"
        android:src="@drawable/ic_action_refresh"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_edit"
        style="@style/common_both_w_and_h_wrap"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_toLeftOf="@id/iv_refresh"
        android:layout_toStartOf="@id/iv_refresh"
        android:background="@drawable/bg_edit_city_manage"
        android:contentDescription="@string/common_iv_edit_content_desc"
        android:src="@drawable/ic_action_edit"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/iv_ok"
        style="@style/common_both_w_and_h_wrap"
        android:layout_centerVertical="true"
        android:layout_marginEnd="@dimen/margin_8dp"
        android:layout_marginRight="@dimen/margin_8dp"
        android:layout_toLeftOf="@id/iv_refresh"
        android:layout_toStartOf="@id/iv_refresh"
        android:contentDescription="@string/common_iv_ok_content_desc"
        android:src="@drawable/ic_action_ok"
        android:visibility="gone"/>
</RelativeLayout>